Updating to work together

--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
       "text/plain": "'/home/ubuntu/Proj/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 6
     }
    ],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,15 @@
    ]
   },
   {
+   "source": [
+    "### Attempt to get mesh term ngram frequency"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +134,9 @@
     "        set_mesh.update(mesh)\n",
     "# dict_inttomesh = {i:mesh for i,mesh in enumerate(set_mesh)}\n",
     "dict_meshtoint = {mesh:i for i,mesh in enumerate(set_mesh)}\n",
-    "df_mesh = pd.Series([mesh2int(row, dict_meshtoint) for row in df['mesh'].values])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = [\"\".join(str(terms)).strip(\"[\").strip(\"]\") if terms is not None else \"\" for terms in list(df_mesh.values)]"
+    "df_mesh = pd.Series([mesh2int(row, dict_meshtoint) for row in df['mesh'].values])\n",
+    "corpus = [\"\".join(str(terms)).strip(\"[\").strip(\"]\") if terms is not None else \"\"  \\\n",
+    "         for terms in list(df_mesh.values)]"
    ]
   },
   {
@@ -151,21 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<1x1605611 sparse matrix of type '<class 'numpy.float64'>'\n\twith 21 stored elements in Compressed Sparse Row format>"
-     },
-     "metadata": {},
-     "execution_count": 50
-    }
-   ],
-   "source": [
-    "X[0]"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
