--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sttings\n",
     "batch_size= 8\n",
     "epochs= 2\n",
     "cuda= torch.cuda.is_available()\n",
@@ -153,7 +154,7 @@
     "        df = pd.read_json(PROJECT_ROOT + DATA_PATH + FILE)\n",
     "    else:\n",
     "        df = pd.read_csv(PROJECT_ROOT + DATA_PATH + FILE)\n",
-    "    ps = PaperSource()\n",
+    "    #ps = PaperSource()\n",
     "else:\n",
     "    print(\"PULLING FROM S3\")\n",
     "    ps = sim_matrix_3.load_dataset(\"enriched_labeled_dataset\")\n",
