End of July 1st

--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -202,6 +202,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mDocstring:\u001b[0m L.sort(key=None, reverse=False) -> None -- stable sort *IN PLACE*\n",
+       "\u001b[0;31mType:\u001b[0m      method_descriptor\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?list.sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(\"../data/mesh_data/MeSHFeatureGeneratedByDeepWalk.csv\", header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MESH NAME NOT FOUND: Image Enhancement/methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chemokine CXCL11'"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2= test[0].to_list()\n",
+    "test2.sort()\n",
+    "test2[5000]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
@@ -211,7 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Prostate-Specific Antigen / analysis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-111-a36d519befee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmesh_embed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmesh_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Prostate-Specific Antigen / analysis'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'Prostate-Specific Antigen / analysis'"
+     ]
+    }
+   ],
+   "source": [
+    "mesh_embed.mesh_dict['Prostate-Specific Antigen / analysis']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {
     "tags": []
    },
@@ -245,7 +326,7 @@
        "(20, 64)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,6 +371,10 @@
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": [
      "outputPrepend"
     ]
