Somethings wrong with the embedding

--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -123,9 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#settings\n",
     "\n",
@@ -133,7 +144,7 @@
     "epochs = 2\n",
     "cuda = torch.cuda.is_available()\n",
     "seed = 42\n",
-    "log_interval = 10\n",
+    "log_interval = 5\n",
     "num_workers = 2\n",
     "\n",
     "#check for cuda\n",
@@ -220,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = auth_core[:5]"
+    "selection = auth_core[:15]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +253,7 @@
     "        else:\n",
     "            self.vae_features = vae_features\n",
     "        self.features = self.vae_features.get_all_features(self.df)\n",
+    "        print(list(self.vae_features.mesh_features.mesh_missing))\n",
     "        self.input_dim = self.vae_features.input_dims\n",
     "            \n",
     "    def __len__(self):\n",
@@ -257,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 345,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -268,56 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Female\n",
-      "MESH NAME NOT FOUND: Male\n"
+      "['MESH NAME NOT FOUND: Female', 'MESH NAME NOT FOUND: Male']\n"
      ]
     }
    ],
@@ -328,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +304,9 @@
     "        self.fc22 = nn.Linear(32, 8)\n",
     "        self.fc3 = nn.Linear(8, 32)\n",
     "        self.fc4 = nn.Linear(32, self.input_dim)\n",
+    "        \n",
+    "        #Want to initialize logvar weights to 0\n",
+    "#         self.fc22.weight.data.fill_(0)\n",
     "\n",
     "    def encode(self, x):\n",
     "        h1 = F.relu(self.fc1(x))\n",
@@ -363,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,17 +349,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
+    "log_interval = 10\n",
+    "\n",
     "model = VAE().to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 349,
    "metadata": {
     "tags": []
    },
@@ -430,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +408,7 @@
     "    \n",
     "    for epoch in range(num_epochs):\n",
     "        bottle_neck=[]\n",
-    "        print(\"Started training epoch no. {}\",format(epoch+1))\n",
+    "        print(\"Started training epoch no. {}\".format(epoch+1))\n",
     "        train_loss= 0\n",
     "        for batch_idx, data in enumerate(train_loader):\n",
     "            data = data.to(device, dtype=torch.float32)\n",
@@ -458,7 +426,7 @@
     "                    100. * batch_idx / len(train_loader),\n",
     "                    loss.item() / len(data)))\n",
     "\n",
-    "        print('====> Epoch: {} Average loss: {:.4f}'.format(\n",
+    "        print('====> Epoch: {} Average loss: {:.4f}\\n'.format(\n",
     "            epoch, train_loss / len(train_loader.dataset)))\n",
     "        train_log.append({\n",
     "            'epoch': epoch,\n",
@@ -468,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 352,
    "metadata": {
     "tags": []
    },
@@ -502,18 +470,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started training epoch no. {} 1\n",
-      "Train Epoch: 0 [0/88 (0%)]\tLoss: 0.628652\n",
-      "Train Epoch: 0 [80/88 (91%)]\tLoss: nan\n",
-      "====> Epoch: 0 Average loss: nan\n",
-      "Started training epoch no. {} 2\n",
-      "Train Epoch: 1 [0/88 (0%)]\tLoss: nan\n",
-      "Train Epoch: 1 [80/88 (91%)]\tLoss: nan\n",
-      "====> Epoch: 1 Average loss: nan\n",
-      "Started training epoch no. {} 3\n",
-      "Train Epoch: 2 [0/88 (0%)]\tLoss: nan\n",
-      "Train Epoch: 2 [80/88 (91%)]\tLoss: nan\n",
-      "====> Epoch: 2 Average loss: nan\n"
+      "Started training epoch no. 1\n",
+      "Train Epoch: 0 [0/295 (0%)]\tLoss: 6.381289\n",
+      "Train Epoch: 0 [80/295 (27%)]\tLoss: 2.904912\n",
+      "Train Epoch: 0 [160/295 (54%)]\tLoss: 1.197813\n",
+      "Train Epoch: 0 [240/295 (81%)]\tLoss: 2.971949\n",
+      "====> Epoch: 0 Average loss: 2.4626\n",
+      "\n",
+      "Started training epoch no. 2\n",
+      "Train Epoch: 1 [0/295 (0%)]\tLoss: 1.355338\n",
+      "Train Epoch: 1 [80/295 (27%)]\tLoss: 1.403716\n",
+      "Train Epoch: 1 [160/295 (54%)]\tLoss: 2.040296\n",
+      "Train Epoch: 1 [240/295 (81%)]\tLoss: 1.289804\n",
+      "====> Epoch: 1 Average loss: 1.6675\n",
+      "\n",
+      "Started training epoch no. 3\n",
+      "Train Epoch: 2 [0/295 (0%)]\tLoss: 1.296019\n",
+      "Train Epoch: 2 [80/295 (27%)]\tLoss: 1.451575\n",
+      "Train Epoch: 2 [160/295 (54%)]\tLoss: 1.662232\n",
+      "Train Epoch: 2 [240/295 (81%)]\tLoss: 1.579229\n",
+      "====> Epoch: 2 Average loss: 1.5610\n",
+      "\n"
      ]
     }
    ],
