--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -99,6 +99,7 @@
    "source": [
     "from __future__ import print_function\n",
     "import argparse\n",
+    "import numpy as np\n",
     "import torch\n",
     "import torch.utils.data\n",
     "from torch import nn, optim\n",
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 404,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 408,
    "metadata": {
     "tags": []
    },
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 411,
    "metadata": {
     "tags": []
    },
@@ -471,25 +472,25 @@
      "output_type": "stream",
      "text": [
       "Started training epoch no. 1\n",
-      "Train Epoch: 0 [0/295 (0%)]\tLoss: 6.381289\n",
-      "Train Epoch: 0 [80/295 (27%)]\tLoss: 2.904912\n",
-      "Train Epoch: 0 [160/295 (54%)]\tLoss: 1.197813\n",
-      "Train Epoch: 0 [240/295 (81%)]\tLoss: 2.971949\n",
-      "====> Epoch: 0 Average loss: 2.4626\n",
+      "Train Epoch: 0 [0/295 (0%)]\tLoss: 0.468097\n",
+      "Train Epoch: 0 [80/295 (27%)]\tLoss: 0.655957\n",
+      "Train Epoch: 0 [160/295 (54%)]\tLoss: 0.185363\n",
+      "Train Epoch: 0 [240/295 (81%)]\tLoss: 0.185038\n",
+      "====> Epoch: 0 Average loss: 0.3555\n",
       "\n",
       "Started training epoch no. 2\n",
-      "Train Epoch: 1 [0/295 (0%)]\tLoss: 1.355338\n",
-      "Train Epoch: 1 [80/295 (27%)]\tLoss: 1.403716\n",
-      "Train Epoch: 1 [160/295 (54%)]\tLoss: 2.040296\n",
-      "Train Epoch: 1 [240/295 (81%)]\tLoss: 1.289804\n",
-      "====> Epoch: 1 Average loss: 1.6675\n",
+      "Train Epoch: 1 [0/295 (0%)]\tLoss: 0.239821\n",
+      "Train Epoch: 1 [80/295 (27%)]\tLoss: 0.234401\n",
+      "Train Epoch: 1 [160/295 (54%)]\tLoss: 0.222882\n",
+      "Train Epoch: 1 [240/295 (81%)]\tLoss: 0.203550\n",
+      "====> Epoch: 1 Average loss: 0.2308\n",
       "\n",
       "Started training epoch no. 3\n",
-      "Train Epoch: 2 [0/295 (0%)]\tLoss: 1.296019\n",
-      "Train Epoch: 2 [80/295 (27%)]\tLoss: 1.451575\n",
-      "Train Epoch: 2 [160/295 (54%)]\tLoss: 1.662232\n",
-      "Train Epoch: 2 [240/295 (81%)]\tLoss: 1.579229\n",
-      "====> Epoch: 2 Average loss: 1.5610\n",
+      "Train Epoch: 2 [0/295 (0%)]\tLoss: 0.230337\n",
+      "Train Epoch: 2 [80/295 (27%)]\tLoss: 0.283121\n",
+      "Train Epoch: 2 [160/295 (54%)]\tLoss: 0.180478\n",
+      "Train Epoch: 2 [240/295 (81%)]\tLoss: 0.140577\n",
+      "====> Epoch: 2 Average loss: 0.2141\n",
       "\n"
      ]
     }
@@ -500,16 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72"
+       "295"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
